--- a/c.css
+++ b/c.css
@@ -9,7 +9,8 @@ ol
 	color: white;
 	font-weight: bold;
 	font-size: 42px;
-	width: 60%;
+	width: 400pm;
+	width: 400pm;
 	margin-left: 150px;
 	padding: 70px;
 }
