--- a/c.css
+++ b/c.css
@@ -9,7 +9,8 @@ ol
 	color: white;
 	font-weight: bold;
 	font-size: 42px;
-	width: 60%;
+	width: 400px;
+	height: 300px;
 	margin-left: 150px;
 	padding: 70px;
 }
@@ -48,6 +49,7 @@ table
 }
 form
 {
+	margin-top: 50px;
 	background-color: #a68db8;
 	width: 175px;
 	height: 50px; 
